--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "admin",
   "version": "0.1.0",
+  "homepage": "https://sasibhumaraju.github.io/Admin-Silpa-raghava-botanica/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
