--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,20 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "botanica admin",
+  "name": "botanica admin",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "botanical.png"
     },
     {
       "src": "logo192.png",
-      "type": "image/png",
+      "type": "botanical.png",
       "sizes": "192x192"
     },
     {
       "src": "logo512.png",
-      "type": "image/png",
+      "type": "botanical.png",
       "sizes": "512x512"
     }
   ],
